force-app/main/default/objects/TimeSheet__c/TimeSheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Timesheet Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>