force-app/main/default/objects/TimeSheet__c/fields/Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Spent_Hours__c</fullName>
    <label>Spent Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>