force-app/main/default/objects/TimeSheet__c/validationRules/Project_OR_Date_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_OR_Date_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(Project__c),
    ISBLANK(Date__c)
)</errorConditionFormula>
    <errorMessage>Project and Date cannot be blank</errorMessage>
</ValidationRule>