force-app/main/default/objects/TimeSheet__c/validationRules/Timesheet_Entry_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Timesheet_Entry_Date_Range</fullName>
    <active>true</active>
    <description>Created Date must be within the last 7 days and not in the future.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(  Date__c  )),
 OR(
         Date__c  &gt; TODAY(),
       Date__c  &lt; (TODAY() - 7)
)

)</errorConditionFormula>
    <errorMessage>Created Date must be within the last 7 days and not in the future.</errorMessage>
</ValidationRule>