force-app/main/default/objects/TimeSheet__c/validationRules/Valid_Spent_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Spent_Hours</fullName>
    <active>true</active>
    <description>Spent hours should be &gt; 0 and ≤ 4.</description>
    <errorConditionFormula>OR(
  ISBLANK(Spent_Hours__c),
  Spent_Hours__c &lt;= 0,
  Spent_Hours__c &gt; 4
)</errorConditionFormula>
    <errorMessage>Spent hours should be &gt; 0 and ≤ 4.</errorMessage>
</ValidationRule>