force-app/main/default/objects/TimeSheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Spent_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>