force-app/main/default/objects/TimeSheet__c/listViews/Last_Month_Timesheet.listView-meta.xml
<ListView>
    <fullName>Last_Month_Timesheet</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Spent_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Last Month Timesheet</label>
</ListView>