force-app/main/default/objects/TimeSheet__c/listViews/This_Month_Timesheet.listView-meta.xml
<ListView>
    <fullName>This_Month_Timesheet</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Spent_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month Timesheet</label>
</ListView>